// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddModerator renders correctly when adding with suggestions 1`] = `
<div
  data-stylename="styles.adding"
>
  <div
    data-stylename="styles.help-text"
  >
    Search here for members to grant moderator powers
  </div>
  <div
    data-stylename="styles.input-row"
  >
    <input
      data-stylename="styles.input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Type..."
      type="text"
    />
    <span
      data-stylename="styles.cancel-button"
      onClick={[Function]}
    >
      Cancel
    </span>
    <span
      data-stylename="styles.add-button"
      onClick={[Function]}
    >
      Add
    </span>
  </div>
  <div
    style={
      Object {
        "width": NaN,
      }
    }
  >
    <KeyControlledItemList
      items={
        Array [
          Object {
            "id": 1,
            "name": "Demeter",
          },
          Object {
            "id": 2,
            "name": "Ares",
          },
          Object {
            "id": 1,
            "name": "Hermes",
          },
        ]
      }
      onChange={[Function]}
      t={[Function]}
      theme={Object {}}
    />
  </div>
</div>
`;

exports[`AddModerator renders correctly, and transitions from not adding to adding 1`] = `
<div
  data-stylename="styles.add-new"
  id="add-new"
  onClick={[Function]}
>
  + 
  Add New
</div>
`;

exports[`AddModerator renders correctly, and transitions from not adding to adding 2`] = `
<div
  data-stylename="styles.adding"
>
  <div
    data-stylename="styles.help-text"
  >
    Search here for members to grant moderator powers
  </div>
  <div
    data-stylename="styles.input-row"
  >
    <input
      data-stylename="styles.input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Type..."
      type="text"
    />
    <span
      data-stylename="styles.cancel-button"
      onClick={[Function]}
    >
      Cancel
    </span>
    <span
      data-stylename="styles.add-button"
      onClick={[Function]}
    >
      Add
    </span>
  </div>
</div>
`;

exports[`ModeratorsList renders correctly 1`] = `
<div>
  <div>
    <RemovableListItem
      item={
        Object {
          "id": 1,
        }
      }
      key="1"
      skipConfirm={true}
      url="/groups/foogroup/members/1"
    />
    <RemovableListItem
      item={
        Object {
          "id": 2,
        }
      }
      key="2"
      skipConfirm={true}
      url="/groups/foogroup/members/2"
    />
    <RemovableListItem
      item={
        Object {
          "id": 3,
        }
      }
      key="3"
      skipConfirm={true}
      url="/groups/foogroup/members/3"
    />
    <RemovableListItem
      item={
        Object {
          "id": 4,
        }
      }
      key="4"
      skipConfirm={true}
      url="/groups/foogroup/members/4"
    />
  </div>
  <AddModerator />
</div>
`;

exports[`ModeratorsSettingsTab renders a list of RemovableListItems and AddModerator 1`] = `
<Fragment>
  <SettingsSection>
    <h3>
      Moderators
      <div
        data-stylename="styles.help-text"
      >
        Who has access to group settings and moderation powers
      </div>
    </h3>
    <ModeratorsList
      key="mList"
      moderators={
        Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
          Object {
            "id": 4,
          },
        ]
      }
      removeItem={[Function]}
      t={[Function]}
    />
  </SettingsSection>
  <SettingsSection>
    <h3>
      Other Roles & Badges
    </h3>
    <div
      data-stylename="styles.help-text"
    >
      Create additional roles or badges for the group
    </div>
    <div
      data-stylename="styles.add-role"
      onClick={[Function]}
    >
      <h4>
        Create new role/badge
      </h4>
      <Icon
        data-stylename="styles.new-role"
        name="Circle-Plus"
      />
    </div>
  </SettingsSection>
  <br />
</Fragment>
`;

exports[`ModeratorsSettingsTab renders loading if no moderators 1`] = `<Loading />`;
